# ai-vibe-check-platform

./: .gitignore  CLAUDE.md  MCP_MIGRATION.md  MERGE.md  README.md  pyproject.toml  readme2.md  requirements.txt  test_document.txt  test_rag.py  vercel.json
.cursor/rules/: branch-rule.mdc
api/: app.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/clear-pdf/: route.ts
frontend/src/app/api/legacy-chat/: route.ts
frontend/src/app/api/mcp/[transport]/: route.ts
frontend/src/app/api/pdf-status/: route.ts
frontend/src/app/api/upload-pdf/: route.ts
frontend/src/components/: ChatInterface.tsx  EnhancedChatInterface.tsx  McpEvaluationDashboard.tsx  McpInspectorDashboard.tsx  PromptEvaluationResults.tsx  PromptLibrary.tsx  PromptPreview.tsx  PromptVariableEditor.tsx
frontend/src/hooks/: useMcp.ts
frontend/src/types/: prompt.ts
frontend/src/utils/: mcpTemplateLoader.ts  promptAnalytics.ts  promptEvaluator.ts  promptManager.ts  templateEngine.ts  templateLoader.ts
prompts/: README.md
prompts/templates/analytical/: analytical-thinker.prompty  chain-of-thought.prompty  research-assistant.prompty
prompts/templates/creative/: creative-writer.prompty
prompts/templates/educational/: expert-teacher.prompty  socratic-teacher.prompty
prompts/templates/professional/: business-communicator.prompty  helpful-assistant.prompty
